k3s/infra/prometheus-stack/grafana-ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: grafana-ingress
  namespace: prometheus-stack
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`grafana.k3s.hackbox.cc`)
    kind: Rule
    services:
    - name: prometheus-stack-install-grafana
      kind: Service
      port: 80
      namespace: prometheus-stack
  tls: {} # use TLS store default certificate
