k3s/infra/prometheus-stack/prometheus-ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: prometheus-ingress
  namespace: prometheus-stack
spec:
  entryPoints:
  - websecure
  routes:
  - match: Host(`prometheus.k3s.hackbox.cc`)
    kind: Rule
    services:
    - name: prometheus-stack-kube-prom-prometheus
      kind: Service
      port: 9090
      namespace: prometheus-stack
  tls: {} # use TLS store default certificate
